--- a/Servo/Servo.ioc
+++ b/Servo/Servo.ioc
@@ -109,8 +109,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Passive Buzzer.ioc
-ProjectManager.ProjectName=Passive Buzzer
+ProjectManager.ProjectFileName=Servo.ioc
+ProjectManager.ProjectName=Servo
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
